namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-management
  labels:
    name: task-management
